force-app/idp/main/default/objects/IDP_Mapping_Set__mdt/IDP_Mapping_Set__mdt.object-meta.xml
<CustomObject>
    <label>IDP Mapping Set</label>
    <pluralLabel>IDP Mapping Sets</pluralLabel>
    <description>One document-mapping use case: the parent record that IDP sections (and through them, rules) attach to. Passed to the engine by DeveloperName.</description>
</CustomObject>