force-app/idp/main/default/objects/IDP_Mapping_Set__mdt/fields/Default_Mode__c.field-meta.xml
<CustomField>
    <fullName>Default_Mode__c</fullName>
    <label>Default Mode</label>
    <type>Picklist</type>
    <description>Run mode when the caller does not pass one. Blank means Extraction.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extraction</fullName>
                <default>true</default>
                <label>Extraction</label>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>