force-app/idp/main/default/objects/IDP_Mapping_Set__mdt/fields/Definition__c.field-meta.xml
<CustomField>
    <fullName>Definition__c</fullName>
    <label>Definition</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>The set&apos;s sections and their rules, as JSON: {"sections":[{...,"rules":[...]}]}. Edited through the IDP Configurator LWC or by hand; see IDP_CONFIGURATION.md for the format. Long text areas cost a flat 255 characters against the org&apos;s custom metadata allocation regardless of content, which is why sections and rules live here rather than as their own records.</description>
</CustomField>