force-app/idp/main/default/objects/IDP_Mapping_Set__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
    <description>What this mapping set is for.</description>
</CustomField>