force-app/idp/main/default/objects/IDP_Mapping_Set__mdt/fields/Finding_Handler__c.field-meta.xml
<CustomField>
    <fullName>Finding_Handler__c</fullName>
    <label>Finding Handler</label>
    <type>Text</type>
    <length>255</length>
    <description>Apex class implementing IIdpFindingHandler, invoked when a run produces mismatches. A handler passed by the caller overrides this default.</description>
</CustomField>