force-app/idp/main/default/objects/IDP_Mapping_Set__mdt/fields/Hub_Object__c.field-meta.xml
<CustomField>
    <fullName>Hub_Object__c</fullName>
    <label>Hub Object</label>
    <type>Text</type>
    <length>255</length>
    <description>API name of the hub object: when a file (or seed record) is linked to a record of this object, every lookup on it is followed so its parents become stepping stones for the walk. Blank means Document__c.</description>
</CustomField>