force-app/idp/main/default/objects/IDP_Mapping_Set__mdt/fields/JSON_Source_Field__c.field-meta.xml
<CustomField>
    <fullName>JSON_Source_Field__c</fullName>
    <label>JSON Source Field</label>
    <type>Text</type>
    <length>255</length>
    <description>Qualified API name of the long-text field holding the raw extracted JSON for batch runs, e.g. Document__c.Extracted_JSON__c. IdpBatchProcessor iterates the field's object and reads the JSON from here.</description>
</CustomField>