force-app/idp/main/default/objects/IDP_Mapping_Set__mdt/fields/Processed_Marker_Field__c.field-meta.xml
<CustomField>
    <fullName>Processed_Marker_Field__c</fullName>
    <label>Processed Marker Field</label>
    <type>Text</type>
    <length>255</length>
    <description>API name of a Datetime field on the JSON Source Field's object. When set, IdpBatchProcessor becomes idempotent: it only picks up records where this field is blank, and stamps it after processing a document (successfully or with errors — deferred documents stay unstamped and are retried). Rerunning the batch then never reprocesses finished work.</description>
</CustomField>