force-app/idp/main/default/objects/IDP_Mapping_Set__mdt/fields/Sample_Document__c.field-meta.xml
<CustomField>
    <fullName>Sample_Document__c</fullName>
    <label>Sample Document</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>One extraction result for this document type, kept so the Configuration Builder can show the wiring against a real shape rather than an empty canvas. It deploys with the metadata and is readable by anyone who can open the configuration page, so it must hold redacted or synthetic values, never a real customer&apos;s document.</description>
</CustomField>